<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="3dp"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/imageMV"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/music1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/songNameMV"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/song_name"
        android:layout_toEndOf="@+id/imageMV"
        android:layout_toStartOf="@+id/songDuration"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/songAlbumMV"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/song_album"
        android:layout_toEndOf="@+id/imageMV"
        android:layout_toStartOf="@+id/songDuration"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/songDuration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/start_tv"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginHorizontal="5dp"/>


</RelativeLayout>